src/objects/Charket__WeChatNotificationTemplate__c.object
<CustomObject>
    <fields>
        <fullName>Charket__ContentMapping__c</fullName>
        <label>Content Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Industry__c</fullName>
        <label>Industry</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charket__NotificationLongUrl__c</fullName>
        <label>Notification Long URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__NotificationURL__c</fullName>
        <label>Notification URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charket__Sample__c</fullName>
        <label>Sample</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__TemplateId__c</fullName>
        <label>Template ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipName>WeChat_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WeChat Notification Template</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Notification Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>